<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/ll_video"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_video"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:src="@drawable/res_video" />

        <TextView
            android:id="@+id/tv_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ecc_tab_video"
            android:textColor="@drawable/res_text"
            android:textSize="12dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_message"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_message"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:src="@drawable/res_message" />

        <TextView
            android:id="@+id/tv_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ecc_tab_msg"
            android:textColor="@drawable/res_text"
            android:textSize="12dp" />
    </LinearLayout>

    <!--<LinearLayout-->
        <!--android:id="@+id/ll_logo"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_weight="1"-->
        <!--android:gravity="center"-->
        <!--android:orientation="vertical">-->

        <!--<ImageView-->
            <!--android:id="@+id/iv_logo"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="40dp"-->
            <!--android:src="@drawable/res_logo" />-->
    <!--</LinearLayout>-->

    <LinearLayout
        android:id="@+id/ll_docs"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_docs"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:src="@drawable/res_docs" />

        <TextView
            android:id="@+id/tv_docs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ecc_tab_doc"
            android:textColor="@drawable/res_text"
            android:textSize="12dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_exit"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_exit"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:src="@drawable/res_exit" />

        <TextView
            android:id="@+id/tv_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ecc_tab_exit"
            android:textColor="@drawable/res_text"
            android:textSize="12dp" />
    </LinearLayout>
</LinearLayout>